# android-native-cpp

./: .gitignore  compile_commands.json  kls_database.db  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/android_native_cpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/android_native_cpp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml  README.md
app/src/main/rust/src/: lib.rs
app/src/test/java/com/example/android_native_cpp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
